# elixcee

./: .gitignore  CHANGELOG.md  Cargo.toml  FUNCTIONS.md  FUNCTIONS_ja.md  README.md  README_ja.md  README_zh.md  elixcee.pyi  pyproject.toml
.github/workflows/: publish.yml  release.yml
benches/: vm_bench.rs
docs/: agent-contract.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_formula_eval.rs  fuzz_formula_parser.rs  fuzz_vba_parser.rs  fuzz_xlsx_reader.rs
src/: check.rs  diagnose.rs  diagnostics.rs  lib.rs  main.rs  reader.rs  snapshot.rs  testworkbook.rs
src/formula/: ast.rs  eval.rs  mod.rs  parser.rs
src/parser/: ast.rs  mod.rs  vba.pest
src/vm/: mod.rs
tasks/: lessons.md  todo.md
tests/: blackbox.rs  cli_check.rs  cli_diagnose.rs  cli_json.rs  cli_snapshot.rs  cli_test_workbook.rs  prop_tests.proptest-regressions  prop_tests.rs
tests/fixtures/blackbox/: check_clean_file_no_diagnostics.toml  check_duplicate_module_name.toml  check_msgbox_interactive_call.toml  check_multi_module_sub_collision.toml  check_undefined_call.toml  run_failure_entrypoint_not_found.toml  run_failure_parse_error.toml  run_failure_undefined_variable.toml  run_multi_module_bare_entrypoint.toml  run_multi_module_qualified_entrypoint.toml  run_multi_module_sub_collision_rejected.toml  run_success_basic_cell_write.toml
