[package]
name = "elixcee"
version = "0.1.0"
edition = "2024"
authors = ["kent-tokyo <kent-tokyo@users.noreply.github.com>"]
repository = "https://github.com/kent-tokyo/elixcee"
homepage = "https://github.com/kent-tokyo/elixcee"
description = "Emulate and execute Excel VBA macros at high speed — without Microsoft Excel"
license = "MIT"
keywords = ["excel", "vba", "macro", "spreadsheet", "python"]
categories = ["simulation", "text-processing"]
readme = "README.md"

[lib]
name = "elixcee"
crate-type = ["cdylib", "rlib"]

[features]
python = ["dep:pyo3", "pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.29.0", optional = true }
zip = "7"

[dev-dependencies]
calamine  = "0.24"
proptest  = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vm_bench"
harness = false
