[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "elixcee"
version = "0.1.0"
requires-python = ">=3.9"

[tool.maturin]
features = ["python"]
# Include the type stub so IDEs see it when the package is installed.
include = [{ path = "elixcee.pyi", format = "sdist" }, { path = "elixcee.pyi", format = "wheel" }]
