[package]
name = "elixcee-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile      = "3"

[dependencies.elixcee]
path = ".."
features = []

# Disable pyo3's extension-module feature so the fuzz harness links as a binary.
[features]
default = []

[[bin]]
name = "fuzz_vba_parser"
path = "fuzz_targets/fuzz_vba_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_formula_parser"
path = "fuzz_targets/fuzz_formula_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_formula_eval"
path = "fuzz_targets/fuzz_formula_eval.rs"
test = false
doc = false

[[bin]]
name = "fuzz_xlsx_reader"
path = "fuzz_targets/fuzz_xlsx_reader.rs"
test = false
doc = false
